feat: add builder pattern and enhanced validation to X12 parser
- Add X12ParserBuilder for flexible configuration
- Implement comprehensive EDI validation
- Add optional Serde support
- Fix compiler warnings and improve error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 thiserror = "1.0"
 regex = "1.0"
 lazy_static = "1.4"
+serde = { version = "1.0", features = ["derive"], optional = true }
+
+[features]
+default = []
+serde_support = ["serde"]
 
 [dev-dependencies]
 assert_matches = "1.5"
